--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ cffi==1.11.2
 chardet==3.0.4
 cssselect2==0.2.1
 defusedxml==0.5.0
-Django==2.0
+django>=2.0.11
 django-paypal==0.4.1
 html5lib==0.999999999
 idna==2.6
@@ -19,7 +19,7 @@ Pillow==4.3.0
 pycparser==2.18
 Pyphen==0.9.4
 pytz==2017.3
-requests==2.18.4
+requests>=2.20.0
 six==1.11.0
 tinycss2==0.6.1
 urllib3==1.24.2
